Add interpretation of code annotations