@@ -15,6 +15,12 @@ import com.beimi.core.BMDataContext;
 @EnableAsync
 @EnableJpaRepositories("com.beimi.web.service.repository.jpa")
 @EnableElasticsearchRepositories("com.beimi.web.service.repository.es")
+/**
+ * export PATH="/usr/local/jdk8/bin":$PATH
+ * nohup java -Xms1240m -Xmx1240m -Xmn450m -XX:PermSize=512M -XX:MaxPermSize=512m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseTLAB  -XX:NewSize=128m  -XX:MaxNewSize=128m -XX:MaxTenuringThreshold=0  -XX:SurvivorRatio=1024 -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=60  -Djava.awt.headless=true -XX:+PrintGCDetails  -Xloggc:gc.log  -XX:+PrintGCTimeStamps  -jar beimi-0.8.0.war --server.port=12345 --spring.profiles.active=develop >/data/web_logs/game/beimi.log &
+ * 
+ * @author
+ */
 public class Application {
     
 	public static void main(String[] args) {
